# ek-scraper

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  publish-to-pypi.yml  publish-to-test-pypi.yml
ek_crawler/: __init__.py  __main__.py  cli.py  crawler.py
ek_crawler/notifications/: __init__.py  pushover.py
ek_scraper/: __init__.py  __main__.py  cli.py  config.py  data_store.py  error.py  scraper.py
ek_scraper/notifications/: __init__.py  email.py  ntfy_sh.py  pushover.py
