[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ek-scraper"
version = "0.1.0"
description = "Simple scraper for Ebay Kleinanzeigen searches with notifications for new ads."
authors = ["Jonas Ehrlich <jonas.ehrlich@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ek_scraper"}]
homepage = "https://github.com/jonasehrlich/ek-scraper"
repository = "https://github.com/jonasehrlich/ek-scraper"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.4"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
types-beautifulsoup4 = "^4.12.0.5"
isort = "^5.12.0"

[tool.poetry.scripts]
ek-scraper = "ek_scraper.cli:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["ek_scraper", "test"]