[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ek-scraper"
version = "0.2.3"
description = "Simple scraper for kleinanzeigen.de searches with notifications for new ads."
authors = ["Jonas Ehrlich <jonas.ehrlich@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ek_scraper" }]
homepage = "https://github.com/jonasehrlich/ek-scraper"
repository = "https://github.com/jonasehrlich/ek-scraper"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
keywords = ["kleinanzeigen.de", "scraper"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
aiohttp = "^3.8.4"
lxml = ">=4.9.2,<6.0.0"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
types-beautifulsoup4 = "^4.12.0.5"
isort = "^5.12.0"
ruff = ">=0.5.1,<0.5.2"
mypy = "^1.8.0"

[tool.poetry.scripts]
ek-scraper = "ek_scraper.cli:main"

[tool.mypy]
strict = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["ek_scraper", "test"]

[tool.ruff]
line-length = 120
select = [
  "E",   # pycodestyle error rules
  "F",   # pycodestyle warning rules
  "B",   # flake8-bugbear rules
  "S",   # flake8-bandit rules
  "PTH", # flake8-use-pathlib
  "PLC", # pylint convention rules
  "PLR", # pylint refactor rules
  "PLE", # pylint error rules
  "PLW", # pylint warning rules
  "C90", # mccabe complexity rules
]

[tool.ruff.per-file-ignores]
# Disable assert-statement and magic-value-comparison rules for tests
"test_*.py" = ["S101", "PLR2004"]
# Disable unused-import rule for __init__.py files
"__init__*.py" = ["F401"]

[tool.ruff.pylint]
max-args = 8
