[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ek-scraper"
version = "0.2.4"
description = "Simple scraper for kleinanzeigen.de searches with notifications for new ads."
authors = [{ name = "Jonas Ehrlich", email = "jonas.ehrlich@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "kleinanzeigen.de",
    "scraper",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "aiohttp>=3.13.0",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "pydantic>=2.12.2",
]

[project.urls]
Homepage = "https://github.com/jonasehrlich/ek-scraper"
Repository = "https://github.com/jonasehrlich/ek-scraper"

[project.scripts]
ek-scraper = "ek_scraper.cli:main"

[dependency-groups]
dev = [
    "types-beautifulsoup4>=4.12.0.5,<5",
    "isort>=5.12,<7.0",
    "ruff>=0.13.0,<0.14.1",
    "mypy>=1.8.0,<2",
]

[tool.hatch.build.targets.sdist]
include = ["ek_scraper"]

[tool.hatch.build.targets.wheel]
include = ["ek_scraper"]

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["ek_scraper", "test"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle error rules
  "F",   # pycodestyle warning rules
  "B",   # flake8-bugbear rules
  "S",   # flake8-bandit rules
  "PTH", # flake8-use-pathlib
  "PLC", # pylint convention rules
  "PLR", # pylint refactor rules
  "PLE", # pylint error rules
  "PLW", # pylint warning rules
  "C90", # mccabe complexity rules
]

[tool.ruff.lint.per-file-ignores]
# Disable assert-statement and magic-value-comparison rules for tests
"test_*.py" = ["S101", "PLR2004"]
# Disable unused-import rule for __init__.py files
"__init__*.py" = ["F401"]

[tool.ruff.lint.pylint]
max-args = 8
